# TTRS

./: CMakeLists.txt  NewBptree.hpp  README.md  ReadMeForBptree.md  alloc.cpp  chad  chad.cpp  clean.sh  code  debug.cpp  makefile  nnbptree.hpp  test.cpp  test.sh
BplusTree/: BplusTree.hpp  Bptree.hpp  CMakeLists.txt  NewBptree.hpp  ReadMeForBptree.md  alloc.cpp  alloc.h  debug.cpp  exceptions.hpp  paragon.hpp  test.cpp  utility.hpp
Frontend/_site/css/: main.css
_site/: README.md
_site/BplusTree/: CMakeLists.txt  test.cpp
_site/Frontend/: index.html
_site/Frontend/css/: main.css
_site/docs/: index.html
chad/TTRSnew/: NewBptree.hpp  chad  chad.cpp
docs/: _config.yml  index.html
docs/_site/: index.html
docs/_site/css/: 2048.css  login.css  main.css
docs/_site/html/: buyticket.html  game.html  login.html  upgrade.html
docs/_site/js/: main.js
docs/css/: 2048.css.map  login.css  main.css  unpgrade.css
docs/css/.sass-cache/4607101ba947cea44909f3e67a08a251987188ef/: 2048.scssc
docs/html/: login.html  upgrade.html
docs/js/: upgrade.js
